// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an ECR with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_ecr_repository\\": {
      \\"testECR_ecr-repo_E42B68DA\\": {
        \\"name\\": \\"bowling\\",
        \\"tags\\": {
          \\"name\\": \\"rug\\",
          \\"description\\": \\"tiedtheroomtogether\\"
        },
        \\"image_scanning_configuration\\": [
          {
            \\"scanOnPush\\": true
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECR/ecr-repo\\",
            \\"uniqueId\\": \\"testECR_ecr-repo_E42B68DA\\"
          }
        }
      }
    },
    \\"aws_ecr_lifecycle_policy\\": {
      \\"testECR_ecr-repo-lifecyclepolicy_4B354AF7\\": {
        \\"policy\\": \\"{\\\\\\"rules\\\\\\":[{\\\\\\"rulePriority\\\\\\":1,\\\\\\"description\\\\\\":\\\\\\"expire old images\\\\\\",\\\\\\"selection\\\\\\":{\\\\\\"tagStatus\\\\\\":\\\\\\"any\\\\\\",\\\\\\"countType\\\\\\":\\\\\\"imageCountMoreThan\\\\\\",\\\\\\"countNumber\\\\\\":800},\\\\\\"action\\\\\\":{\\\\\\"type\\\\\\":\\\\\\"expire\\\\\\"}}]}\\",
        \\"repository\\": \\"bowling\\",
        \\"depends_on\\": [
          \\"aws_ecr_repository.testECR_ecr-repo_E42B68DA\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECR/ecr-repo-lifecyclepolicy\\",
            \\"uniqueId\\": \\"testECR_ecr-repo-lifecyclepolicy_4B354AF7\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an ECR without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_ecr_repository\\": {
      \\"testECR_ecr-repo_E42B68DA\\": {
        \\"name\\": \\"bowling\\",
        \\"image_scanning_configuration\\": [
          {
            \\"scanOnPush\\": true
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECR/ecr-repo\\",
            \\"uniqueId\\": \\"testECR_ecr-repo_E42B68DA\\"
          }
        }
      }
    },
    \\"aws_ecr_lifecycle_policy\\": {
      \\"testECR_ecr-repo-lifecyclepolicy_4B354AF7\\": {
        \\"policy\\": \\"{\\\\\\"rules\\\\\\":[{\\\\\\"rulePriority\\\\\\":1,\\\\\\"description\\\\\\":\\\\\\"expire old images\\\\\\",\\\\\\"selection\\\\\\":{\\\\\\"tagStatus\\\\\\":\\\\\\"any\\\\\\",\\\\\\"countType\\\\\\":\\\\\\"imageCountMoreThan\\\\\\",\\\\\\"countNumber\\\\\\":800},\\\\\\"action\\\\\\":{\\\\\\"type\\\\\\":\\\\\\"expire\\\\\\"}}]}\\",
        \\"repository\\": \\"bowling\\",
        \\"depends_on\\": [
          \\"aws_ecr_repository.testECR_ecr-repo_E42B68DA\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECR/ecr-repo-lifecyclepolicy\\",
            \\"uniqueId\\": \\"testECR_ecr-repo-lifecyclepolicy_4B354AF7\\"
          }
        }
      }
    }
  }
}"
`;
